@@ -54,6 +54,7 @@ t/026FileApp.t
 t/027Watch2.t
 t/028Additivity.t
 t/029SysWide.t
+t/030LDLevel.t
 t/deeper1.expected
 t/deeper6.expected
 t/deeper7.expected
