@@ -60,8 +60,10 @@ sub new {
     }
 
     my $appender = $appenderclass->new(
-            # Set min_level to default, *we* are controlling this now
-        min_level => 'debug', 
+            # Set min_level to the lowest setting. *we* are 
+            # controlling this now, the appender should just
+            # log it with no questions asked.
+        min_level => 'debug',
             # Set 'name' and other parameters
         map { $_ => $params{$_} } keys %params,
     );
